version 0.5.3 - dd-mmm-yyyy
 . TextureMgr: Simulator supports PVRTC images (issue #75)

version 0.5.2 - 04-Nov-2008
 . All: assign [super init] to self (issue #61)
 . Documentation: Add AUTHORS file with the cocos2d's contributors (issue #62)
 . CocosNode: added tags (getByTag, removeByTag)  (issue #52)
 . CocosNode: fixed big memory leak (issue #67)
 . Director: able to remove event enabled nodes (issue #56)
 . Director: can be hidden / unhidden (issue #55)
 . License: Explicit paragraphs that allows cocos2d + closed source projects (issue #57)
 . MenuItemImage: able to modify inner sprites (issue #58)
 . OpenGLSupport: added PowerVR Texture Compression (PVRTC) format support (issue #66)
 . Transitions: don't flicker (issue #60)

version 0.5.1 - 20-Oct-2008
 . Actions: Animation has restoreOriginalFrame argument (issue #46)
 . Actions: CallFunc retains target (issue #42)
 . AtlasNode: renders some artifacts (partially fixed issue #47)
 . Demos: Updated Chipmunks demos (issue #43)
 . Demos: Elasticity fixed in Chipmunk_Accel (issue #45)
 . Director: fps_images.png consumes much less texture memory (issue #49)
 . Documentation: included LICENSE.artwork (issue #51)
 . LabelAtlas: works with NxM size images (issue #50)
 . MenuItem: supports enable/disable (issue #22)
 . Particle system: exports more variables (issue #48)
 
version 0.5.0 - 05-Oct-2008
 . Actions: copy protocol fixed on some actions (issue #27)
 . Chipmunk: using newest version from svn (issue #34)
 . CocosNode: Nodes not being dealloced with active actions (issue #25)
 . CocosNode: Doxygen API reference fixed (issue #29)
 . Demo: added test/example of the new Atlas feature (issue #40)
 . Director: Doxygen API reference fixed (issue #29)
 . Director: Display FPS are rendered 10 times per second (issue #37)
 . LabelAtlas: Fast render update Label (issue #36) (*NEW_FEATURE*)
 . MenuItem: sending correct 'self' as argument (issue #19)
 . Misc: improved cocos2d icon and default image (issue #33)